--- a/lab3/todolist.html
+++ b/lab3/todolist.html
@@ -9,4 +9,20 @@
     <!--Stylesheet-->
     <link rel="stylesheet" href="list.css">
 </head>
+<body>
+    <nav class="nav">
+        <h2>ToDo List</h2>
+    </nav>
+    <i class="uil uil-trash-alt"></i>
+    <div class="container">
+        <div id="newtask">
+            <h1>ToDo List</h1>
+            <input type="text" placeholder="New Task">
+            <button id="push">Add</button>
+        </div>
+        <div id="tasks"></div>
+    </div>
+    <!--Script-->
+    <script src="list.js"></script>
+</body>
 </html>
